# NeutralMotion

./: README.md  analysis_notebook.ipynb  batch_bb144_scheduler_runs.ipynb  powermove_script.py  pyproject.toml  qasm_to_circuit_and_dag_examples.ipynb  schedule_tutorial.ipynb  scheduler_batch_timings.csv  test.ipynb
Scheduler_Test/INPUT/: bv_n14.json  bv_n50.json  bv_n70.json  qft_n18.json  qft_n29.json  vqe_n10.json  vqe_n20.json  vqe_n30.json  vqe_n50.json
Scheduler_Test/OUTPUT/: bb144_n_init.naive_dag.schedule.txt  (+23 more)
outputs/: Test3.schedule.txt  Test4.schedule.txt  align_p1_new.schedule.txt  bb144_1_fastsa_k1000.fastsa_log.csv  bb144_1_fastsa_k1000.schedule.txt  bb144_1_fastsa_k1000_1.fastsa_log.csv  bb144_1_fastsa_k1000_1.schedule.txt  bb144_1_fastsa_k100_test.schedule.txt  bb144_bivariate_bicycle_cz.schedule.txt  bb144_bivariate_bicycle_cz_sanitized.schedule.txt  bb144_fastsa_k1.schedule.txt  bb144_fastsa_k100.schedule.txt  bb144_fastsa_k2.schedule.txt  bb144_fastsa_k20.schedule.txt  bb144_fastsa_k3.schedule.txt  bb144_fastsa_k4.schedule.txt  bb144_fastsa_k5.schedule.txt  bb144_fastsa_k6.schedule.txt  bb144_fastsa_k7.schedule.txt  bb144_fastsa_k_sweep.csv  bb144_n_fastsa_k100.schedule.txt  bb144_n_fastsa_k1000.fastsa_log_1.csv  bb144_n_fastsa_k20.schedule.txt  bb144_n_init.schedule.txt  bb144_random.schedule.txt  qft_06_n.logtest.fastsa_log.csv  qft_06_n.logtest.schedule.txt  qft_06_n_fastsa.schedule.txt  qft_06_n_k100.schedule.txt  qft_6.schedule.txt  qft_n63_init_order.schedule.txt  qft_n63_n_fastsa.schedule.txt  qft_n63_transpiled.schedule.txt
(+67 files in other folders)
