[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "NeutralMotion"
version = "0.1.0"
description = "A solver for the shuttling problem in Neutral Atom quantum computers."
readme = "README.md"
authors = [
    { name = "Gage Erwin", email = "gnerwin@wisc.edu"}
]
requires-python = ">=3.9"
dependencies = [
    "pint>=0.24",
    "qiskit>=1.0",
]

[project.scripts]
naive_dag = "naive_dag.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
